# tree-sitter-hsl

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-hsl.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_hsl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHsl/: hsl.h
bindings/swift/TreeSitterHslTests/: TreeSitterHslTests.swift
examples/: 00_hello_world.hsl  01_pointers.hsl
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
