[package]
name = "tree-sitter-hsl"
description = "The HyperSpace Lang tree sitter grammar"
version = "0.1.0"
authors = ["Thibault Cheneviere <thibault.chene23@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "hsl"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/hs-lang/tree-sitter-hsl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
